--- a/Regulations_API_Data_WHD_Data.ipynb
+++ b/Regulations_API_Data_WHD_Data.ipynb
@@ -51,7 +51,7 @@
     "# Defining the url (base link, API, etc)\n",
     "\n",
     "base = 'https://api.data.gov/regulations/v3/documents'\n",
-    "api = 'VMXKcPf6MelG3qKCabiajcRcEoJvngQSJP3Y1Yki' # sandeep's api key\n",
+    "api = ''                # Insert api key\n",
     "docnum = 'WHD-2011-0003'                         # Docket Id\n",
     "dattyp = 'json'                                  # record type requested\n"
    ]
